--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   dio: ^3.0.9
   dio_flutter_transformer: ^3.0.2
-  geolocation: ^1.1.2
+  location: ^3.0.0
   barcode_scan: ^3.0.0
   flutter_image_compress: ^0.6.7
   device_info: ^0.4.2+4
@@ -35,6 +35,7 @@ dependencies:
   page_transition: "^1.1.5"
   moor: ^3.2.0
   moor_flutter: ^3.0.0
+  shimmer: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
