--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   moor: ^3.2.0
   moor_flutter: ^3.0.0
   shimmer: ^1.1.1
+  intl: ^0.16.1
+  toast: ^0.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
