--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+#  flutter_localizations:
+#    sdk: flutter
   dio: ^3.0.9
   dio_flutter_transformer: ^3.0.2
   location: ^3.0.0
@@ -38,6 +40,12 @@ dependencies:
   shimmer: ^1.1.1
   intl: ^0.16.1
   toast: ^0.1.5
+  permission_handler: ^5.0.1+1
+  flutter_rounded_date_picker: 1.0.4
+  moor_db_viewer: 2.0.3
+  camera:
+  path_provider:
+  path:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
