--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-#  flutter_localizations:
-#    sdk: flutter
   dio: ^3.0.9
   dio_flutter_transformer: ^3.0.2
   location: ^3.0.0
@@ -43,6 +41,9 @@ dependencies:
   permission_handler: ^5.0.1+1
   flutter_rounded_date_picker: 1.0.4
   moor_db_viewer: 2.0.3
+  firebase_messaging: ^7.0.0
+  firebase_core: ^0.5.0
+  overlay_support: ^1.0.5
   camera:
   path_provider:
   path:
